# safedriveanalytics

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  run_pipeline.sh
.github/workflows/: cd.yml  ci.yml
airflow/: Dockerfile  requirements.txt
airflow/dags/: ml_training_dag.py  smhi_ingestion_dag.py  trafikverket_ingestion_dag.py  transformation_dag.py
api/: Dockerfile  main.py
api/tests/: test_api.py
dashboard/: Dockerfile  dashboard.py
database/: 02_create_mlflow_db.sh  schema.sql
docs/sprints/: sprint_log.md
ingestion/smhi/: ingest_smhi.py  smhi_client.py
ingestion/smhi/tests/: test_smhi_client.py
ingestion/trafikverket/: ingest_trafikverket.py  trafikverket_client.py
ingestion/trafikverket/tests/: test_trafikverket_client.py
jobs/: Dockerfile  runner.py
ml_model/: train.py
mlflow/: Dockerfile  entrypoint.sh  start.py
transformation/: transform_and_merge.py
