[project]
name = "safedriveanalytics"
version = "0.1.0"
description = "Analys av hur väder påverkar trafikflödet i Sverige"
requires-python = ">=3.11"

dependencies = [
    "requests>=2.31.0",
    "pandas>=2.1.0",
    "psycopg2-binary>=2.9.9",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "mlflow>=2.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["ingestion", "transformation", "ml_model", "api"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=. --cov-report=term-missing"

[tool.coverage.run]
omit = ["*/tests/*", "*/migrations/*"]

[tool.setuptools.packages.find]
include = ["ingestion*", "transformation*", "ml_model*", "api*", "dashboard*"]
